# ioos_metrics

./: .gitignore  .pre-commit-config.yaml  GTS_Totals_weather_act.ipynb  IOOS_BTN.ipynb  LICENSE  MANIFEST.in  README.md  asset_inventory.html  btn_metrics.py  conda-lock.yml  environment.yml  gts_atn.html  gts_atn_metrics.py  gts_metrics.py  gts_regional.html  gts_regional_metrics.py  index.html  ioos_btn_metrics.csv  ioos_metrics.py  pyproject.toml  read_bufr.py  ruff.toml  run_metrics.ipynb
.binder/: environment.yml
.github/: dependabot.yml
.github/workflows/: metrics.yml  pypi.yml  tests.yml  website_create_and_deploy.yml
gts/: GTS_ATN_monthly_totals.csv  GTS_regional_totals_FY2018_Q2.csv  GTS_regional_totals_FY2018_Q3.csv  GTS_regional_totals_FY2018_Q4.csv  GTS_regional_totals_FY2019_Q1.csv  GTS_regional_totals_FY2019_Q2.csv  GTS_regional_totals_FY2019_Q3.csv  GTS_regional_totals_FY2019_Q4.csv  GTS_regional_totals_FY2020_Q1.csv  GTS_regional_totals_FY2020_Q2.csv  GTS_regional_totals_FY2020_Q3.csv  GTS_regional_totals_FY2020_Q4.csv  GTS_regional_totals_FY2021_Q1.csv  GTS_regional_totals_FY2021_Q2.csv  GTS_regional_totals_FY2021_Q3.csv  GTS_regional_totals_FY2021_Q4.csv  GTS_regional_totals_FY2022_Q1.csv  GTS_regional_totals_FY2022_Q2.csv  GTS_regional_totals_FY2022_Q3.csv  GTS_regional_totals_FY2022_Q4.csv  GTS_regional_totals_FY2023_Q1.csv  GTS_regional_totals_FY2023_Q2.csv  GTS_regional_totals_FY2023_Q3.csv  GTS_regional_totals_FY2023_Q4.csv  GTS_regional_totals_FY2024_Q1.csv  GTS_regional_totals_FY2024_Q2.csv  GTS_regional_totals_FY2024_Q3.csv  GTS_regional_totals_FY2024_Q4.csv  GTS_regional_totals_FY2025_Q1.csv  GTS_totals_FY2022_Q2.csv  GTS_totals_FY2022_Q3.csv  GTS_totals_FY2022_Q4.csv  GTS_totals_FY2023_Q1.csv  GTS_totals_FY2023_Q2.csv
ioos_metrics/: __init__.py  ioos_metrics.py  national_platforms.py
notebooks/: GTS_Totals_weather_act.ipynb  IOOS_BTN.ipynb  IOOS_obs_2_NDBC.ipynb  RA_metrics.ipynb  README.md  glider_metrics.ipynb  mbon_citation_visualizations.ipynb  run_metrics.ipynb
static/: main.css
tests/: test_metrics.py  test_national_platforms.py
website/: Browse_config.json  asset_inventory_config.json  create_asset_inventory_page.py  create_catalog_landing_page.py  create_gts_atn_landing_page.py  create_gts_regional_landing_page.py  create_tool_landing_page.py  gts_atn_config.json  gts_regional_config.json
website/deploy/: gts_regional.html  index.html
website/deploy/static/: main.css
website/model_list_dir/: 2BOX.json  AcousticThresholds.json
website/templates/: asset_inventory_page.html  catalog_landing_page.html  gts_atn_landing_page.html  gts_regional_landing_page.html  tool_landing_page.html
